@startuml

title __AR's Class Diagram__\n

  namespace com.mad.mymoon {
    namespace ui.AR {
      class com.mad.mymoon.ui.AR.ARFragment {
          ~ AREarth : Button
          ~ ARMoon : Button
          ~ ARPortal : Button
          + onCreateView()
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.AR {
      class com.mad.mymoon.ui.AR.ARViewModel {
          - mText : MutableLiveData<String>
          + ARViewModel()
          + getText()
      }
    }
  }
  

  com.mad.mymoon.ui.AR.ARFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.AR.ARFragment o-- com.mad.mymoon.ui.AR.ARViewModel : ARViewModel
  com.mad.mymoon.ui.AR.ARViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
